# LearnRust

./: .gitignore  Cargo.toml  README.md  config.json
crates/app-core/: Cargo.toml
crates/app-core/src/: cli.rs  lib.rs  monitor.rs  services.rs  utils.rs
crates/application/: Cargo.toml
crates/application/src/: analysis.rs  lib.rs  monitoring.rs  services.rs  trading.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  di.rs  lib.rs  utils.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs  models.rs
crates/data/src/providers/: binance.rs  crypto.rs  local.rs  mod.rs  yahoo.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  events.rs  lib.rs  market.rs  portfolio.rs  strategy.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: data_providers.rs  event_bus.rs  lib.rs  messaging.rs  storage.rs
crates/plot/: Cargo.toml
crates/plot/src/: lib.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: api.rs  cli.rs  lib.rs  ui.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
data/market/: AAPL.csv  GOOGL.csv
