[workspace]
resolver = "2"  # 使用 edition 2021 对应的解析器
members = [
    "crates/common",
    "crates/core",
    "crates/utils",
    "crates/data",
    "crates/plot",
    "bin/app"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A multi-crate Rust project"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
futures = "0.3"
tokio-stream = "0.1" 