[package]
name = "app-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
common = { path = "../common" }
data = { path = "../data" }
plot = { path = "../plot" }
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
