[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
uuid = { version = "1.0", features = ["v4"] } 