[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Common utilities and shared code"
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true 