[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Common utilities and shared code"
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
num_cpus = "1.16"
async-trait = "0.1"
futures = "0.3"
tokio.workspace = true 