[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
futures = "0.3"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
thiserror = "1.0"
time = "0.3"
yahoo_finance_api = "0.3"
binance = "0.21.0"

[dev-dependencies]
tokio-test = "0.4" 