[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
common = { path = "../common" }
data = { path = "../data" }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp"] }
log = "0.4" 