[package]
name = "utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Utility functions and helpers"
license.workspace = true

[dependencies]
common = { path = "../common" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
anyhow.workspace = true 